--- a/src/ui/styles/Color.module.scss
+++ b/src/ui/styles/Color.module.scss
@@ -1,7 +1,7 @@
-.white {
-  color: rgba(var(--text), var(--lighten));
+.primary-white {
+  color: rgba(var(--primary-white), var(--lighten));
 }
 
-.pink {
-  color: rgba(var(--pink), var(--lighten));
+.primary-black {
+  color: rgba(var(--primary-black), var(--lighten));
 }
