--- a/src/ui/styles/Size.module.scss
+++ b/src/ui/styles/Size.module.scss
@@ -1,34 +1,24 @@
-.font-58 {
+.font-40 {
   font-size: var(--headline-1);
-  line-height: var(--line-118);
-}
-
-.font-50 {
-  font-size: var(--headline-2);
-  line-height: var(--line-118);
+  line-height: 1.3;
 }
 
 .font-28 {
-  font-size: var(--headline-3);
-  line-height: var(--line-118);
-}
-
-.font-22 {
-  font-size: var(--headline-4);
-  line-height: var(--line-118);
+  font-size: var(--headline-2);
+  line-height: 1.3;
 }
 
 .font-18 {
   font-size: var(--body-1);
-  line-height: var(--line-140);
+  line-height: 1.3;
 }
 
 .font-16 {
-  font-size: var(--body-2);
-  line-height: var(--line-118);
+  font-size: var(--body-1);
+  line-height: 1.4;
 }
 
-.font-14 {
-  font-size: var(--body-3);
-  line-height: var(--line-118);
+.font-12 {
+  font-size: var(--caption);
+  line-height: 1.25;
 }
