--- a/src/ui/radio-group/RadioGroup.module.scss
+++ b/src/ui/radio-group/RadioGroup.module.scss
@@ -3,14 +3,9 @@
 
 .component {
   display: grid;
-}
-
-.label {
-  display: grid;
-  grid-auto-flow: column;
-  grid-column-gap: var(--spacing-unit);
+  grid-template-columns: repeat(var(--count), 1fr);
   justify-content: start;
   align-items: center;
 
-  margin-bottom: calc(var(--spacing-unit) * 2);
+  padding-top: var(--spacing-unit);
 }
