styles for select

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,6 +32,11 @@ html {
   --gutters: 6rem;
   --grid: 100%;
 
+  //input
+
+  --field-height: 3.75rem;
+  --field-padding: 1rem 1.25rem;
+
   //header
 
   --header-height: 5rem;
