wire date-picker to react-final-form

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,6 +41,10 @@ html {
 
   --header-height: 5rem;
 
+  //button
+
+  --button-position: relative;
+
   //breakpoints
 
   --breakpoint-xxs: 360px;
