--- a/src/ui/button/Button.module.scss
+++ b/src/ui/button/Button.module.scss
@@ -30,8 +30,12 @@
   font-weight: var(--medium);
 }
 
+.weight-bold {
+  font-weight: var(--bold);
+}
+
 .icon {
-  position: relative;
+  position: var(--button-position);
 }
 
 .icon span {
