--- a/src/ui/calendar/Calendar.module.scss
+++ b/src/ui/calendar/Calendar.module.scss
@@ -3,6 +3,96 @@
 
 .component {
   padding: calc(var(--spacing-unit) * 2);
+
+  box-sizing: border-box;
+
+  border: 1px solid rgba(var(--primary-black), 0.1);
+  border-radius: 0.5rem;
+
+  background-color: rgba(var(--primary-white), 1);
+}
+
+.header {
+  position: relative;
+
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  grid-column-gap: var(--spacing-unit);
+
+  padding-bottom: calc(var(--spacing-unit) * 2);
+}
+
+.header::before {
+  position: absolute;
+  bottom: 0;
+  left: calc(var(--spacing-unit) * -2);
+  right: calc(var(--spacing-unit) * -2);
+  content: "";
+
+  display: block;
+  height: 1px;
+
+  background-color: rgba(var(--primary-black), 0.1);
+}
+
+.control {
+  min-height: 2.5rem;
+
+  font-family: var(--primary-font);
+  font-weight: var(--regular);
+  font-size: var(--body-1);
+  color: rgba(var(--primary-black), 1);
+
+  border: 0;
+  border-radius: 0.75rem;
+
+  background-color: #ececec;
+
+  cursor: pointer;
+
+  transition-timing-function: linear;
+  transition-duration: 250ms;
+  transition-property: background-color, color;
+
+  &:hover,
+  &:focus {
+    color: rgba(var(--primary-white), 1);
+
+    background-color: rgba(var(--primary-black), 1);
+  }
+}
+
+.month {
+  position: relative;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: var(--gap);
+  justify-items: center;
+  align-items: center;
+
+  margin-top: calc(var(--spacing-unit) * 3);
+  padding: 0 calc(var(--spacing-unit) * 1.5);
+}
+
+.switch {
+  --button-position: absolute;
+  top: 50%;
+
+  transform: translateY(-50%);
+}
+
+.prev {
+  left: calc(var(--spacing-unit) * 1.5);
+}
+
+.next {
+  right: calc(var(--spacing-unit) * 1.5);
+}
+
+.monthDisplay {
+  margin: 0;
 }
 
 .content {
@@ -10,8 +100,10 @@
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: var(--gap);
   justify-items: center;
+
+  margin-top: calc(var(--spacing-unit) * 1.5);
 }
 
-.head {
+.titles {
   margin-bottom: calc(var(--spacing-unit) * 2.5);
 }
