--- a/src/ui/button/Button.module.scss
+++ b/src/ui/button/Button.module.scss
@@ -175,20 +175,14 @@
   &.hover {
     color: rgba(var(--primary-white), 1);
 
-    background-image: linear-gradient(360deg, rgb(255, 209, 139) 0%, rgba(255, 0, 0, 0) 50%), linear-gradient(259.57deg, rgb(38, 99, 255) 1.58%, rgb(255, 56, 40) 92.54%);
-
-    box-shadow: none;
+    background-color: rgba(var(--primary-black), 1);
   }
 
   &:active,
   &.active {
     color: rgba(var(--primary-white), 1);
 
-    background-image: linear-gradient(360deg, rgb(255, 209, 139) 0%, rgba(255, 0, 0, 0) 50%), linear-gradient(259.57deg, rgb(38, 99, 255) 1.58%, rgb(255, 56, 40) 92.54%);
-
-    box-shadow: none;
-
-    opacity: 0.8;
+    background-color: rgba(var(--primary-black), 0.8);
   }
 }
 
@@ -246,5 +240,28 @@
   &:active,
   &.active {
     color: rgba(var(--primary-black), 0.8);
+  }
+}
+
+.rainbow {
+  &:hover,
+  &:focus,
+  &.hover {
+    color: rgba(var(--primary-white), 1);
+
+    background-image: linear-gradient(360deg, rgb(255, 209, 139) 0%, rgba(255, 0, 0, 0) 50%), linear-gradient(259.57deg, rgb(38, 99, 255) 1.58%, rgb(255, 56, 40) 92.54%);
+
+    box-shadow: none;
+  }
+
+  &:active,
+  &.active {
+    color: rgba(var(--primary-white), 1);
+
+    background-image: linear-gradient(360deg, rgb(255, 209, 139) 0%, rgba(255, 0, 0, 0) 50%), linear-gradient(259.57deg, rgb(38, 99, 255) 1.58%, rgb(255, 56, 40) 92.54%);
+
+    box-shadow: none;
+
+    opacity: 0.8;
   }
 }
