--- a/src/ui/pop-up-container/PopUpContainer.module.scss
+++ b/src/ui/pop-up-container/PopUpContainer.module.scss
@@ -51,6 +51,7 @@
   position: relative;
 
   display: grid;
+  grid-template-rows: 100%;
 
   width: 100%;
   max-height: 86vh;
@@ -69,6 +70,7 @@
   position: absolute;
   top: 1.875rem;
   right: 2.5rem;
+  z-index: 1;
 }
 
 .content {
