--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -2,7 +2,9 @@
 @use "../helper/style/media";
 
 .component {
-
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .header {
@@ -10,7 +12,7 @@
 }
 
 .main {
-
+  flex-grow: 1;
 }
 
 .mobile {
@@ -23,8 +25,4 @@
   @include mixin.until(media.$md) {
     display: none;
   }
-}
-
-.footer {
-
 }
