--- a/src/modules/header/Header.module.scss
+++ b/src/modules/header/Header.module.scss
@@ -2,6 +2,8 @@
 @use "../../helper/style/media";
 
 .component {
+  box-sizing: border-box;
+
   border-bottom: 1px solid rgba(var(--primary-black), 0.1);
 }
 
