auction and otc cards

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,6 +23,9 @@ html {
   --primary-white: 255, 255, 255;
   --primary-black: 0, 0, 0;
   --ocean-blue: 38, 99, 255;
+  --success: 45, 171, 80;
+  --process: 75, 112, 255;
+  --error: 255, 0, 0;
 
   //grid
 
