--- a/src/modules/header/Header.module.scss
+++ b/src/modules/header/Header.module.scss
@@ -5,6 +5,8 @@
   box-sizing: border-box;
 
   border-bottom: 1px solid rgba(var(--primary-black), 0.1);
+
+  background-color: rgba(var(--primary-white), 1);
 }
 
 .wrapper {
