--- a/src/modules/header/ui/navigation/Navigation.module.scss
+++ b/src/modules/header/ui/navigation/Navigation.module.scss
@@ -41,7 +41,7 @@
 
   box-sizing: border-box;
 
-  border: 1px solid #E6E6E6;
+  border: 1px solid #e6e6e6;
   border-radius: 0.5rem;
 
   background-color: rgba(var(--primary-white), 1);
@@ -87,6 +87,6 @@
 
   &:hover,
   &:focus {
-    background-color: #EDEDED;
+    background-color: #ededed;
   }
 }
