--- a/src/modules/select-token-field/Toggle.module.scss
+++ b/src/modules/select-token-field/Toggle.module.scss
@@ -11,11 +11,17 @@
 
 .label {
   display: grid;
-  grid-template-areas: "icon currency" "icon title";
+  grid-template-columns: auto 1fr auto;
+  grid-template-areas: "icon name toggle" "icon count toggle";
   grid-column-gap: calc(var(--spacing-unit) * 2);
   grid-row-gap: calc(var(--spacing-unit) * 0.4);
   justify-content: start;
   align-items: center;
+
+  padding: calc(var(--spacing-unit) * 1.5) calc(var(--spacing-unit) * 2.5);
+
+  border: 1px solid rgba(var(--primary-black), 0.8);
+  border-radius: 0.5rem;
 }
 
 .label::before {
@@ -35,4 +41,16 @@
   background-size: cover;
 
   overflow: hidden;
+}
+
+.name {
+  grid-area: name;
+}
+
+.count {
+  grid-area: count;
+}
+
+.toggle {
+  grid-area: toggle;
 }
