--- a/src/ui/pop-up-container/PopUpContainer.module.scss
+++ b/src/ui/pop-up-container/PopUpContainer.module.scss
@@ -66,10 +66,22 @@
   overflow: hidden;
 }
 
+.fixedHeight {
+  min-height: 37.5rem;
+  max-height: 37.5rem;
+}
+
 .close {
   position: absolute;
   top: 1.875rem;
   right: 2.5rem;
+  z-index: 1;
+}
+
+.back {
+  position: absolute;
+  top: 2.75rem;
+  left: 2.5rem;
   z-index: 1;
 }
 
