--- a/src/pages/create-auction/CreateAuction.module.scss
+++ b/src/pages/create-auction/CreateAuction.module.scss
@@ -2,5 +2,5 @@
 @use "../../helper/style/media";
 
 .component {
-  margin-top: calc(var(--spacing-unit) * 5);
+  margin: calc(var(--spacing-unit) * 5) 0;
 }
