--- a/src/modules/provide-advanced-settings/ProvideAdvancedSettings.module.scss
+++ b/src/modules/provide-advanced-settings/ProvideAdvancedSettings.module.scss
@@ -6,6 +6,13 @@
   grid-row-gap: calc(var(--spacing-unit) * 5);
 }
 
+.period {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: start;
+  grid-column-gap: calc(var(--spacing-unit) * 2.5);
+}
+
 .submit {
   margin-top: calc(var(--spacing-unit) * 0.5);
 }
