--- a/src/ui/description-list/DescriptionList.module.scss
+++ b/src/ui/description-list/DescriptionList.module.scss
@@ -14,7 +14,7 @@
   display: grid;
   grid-gap: calc(var(--spacing-unit) * 1.5);
   grid-template-columns: repeat(2, auto);
-  align-items: baseline;
+  align-content: center;
   margin: 0;
   padding: 0;
 
