--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,7 @@ html {
   //input
 
   --field-height: 3.75rem;
-  --field-padding: 1rem 1.25rem;
+  --field-padding: 0.5rem 1.25rem;
 
   //header
 
@@ -47,6 +47,7 @@ html {
   //button
 
   --button-position: relative;
+  --text-decoration: none;
 
   //breakpoints
 
