--- a/src/ui/button/Button.module.scss
+++ b/src/ui/button/Button.module.scss
@@ -8,7 +8,7 @@
 
   font-family: var(--primary-font);
   line-height: 1.2;
-  text-decoration: none;
+  text-decoration: var(--text-decoration);
 
   border: 0;
 
