auction pages refactoring

--- a/src/ui/status/Status.module.scss
+++ b/src/ui/status/Status.module.scss
@@ -24,3 +24,11 @@
     background-color: rgba(var(--color), 1);
   }
 }
+
+.coming {
+  color: rgba(var(--color), 0.4);
+
+  &::before {
+    background-color: rgba(var(--color), 0.4);
+  }
+}
