--- a/src/pages/auction/Auction.module.scss
+++ b/src/pages/auction/Auction.module.scss
@@ -36,6 +36,10 @@
 }
 
 .result {
+  flex-grow: 1;
+  display: grid;
+  grid-template-rows: 100%;
+
   padding: calc(var(--spacing-unit) * 6);
 }
 
@@ -45,7 +49,12 @@
   grid-gap: calc(var(--spacing-unit) * 3);
 
   margin: 0;
+  margin-bottom: calc(var(--spacing-unit) * 2.5);
   padding: 0;
 
   list-style: none;
+}
+
+.pagination {
+  margin-top: auto;
 }
