--- a/src/ui/on-off/OnOff.module.scss
+++ b/src/ui/on-off/OnOff.module.scss
@@ -12,10 +12,9 @@
   width: 5rem;
   height: 2.25rem;
 
-  border: 1px solid rgba(var(--primary-black), 0.1);
   border-radius: 3rem;
 
-  background-color: rgba(var(--primary-white), 1);
+  background-color: #ECECEC;
 }
 
 .component::before {
@@ -30,7 +29,7 @@
 
   border-radius: 50%;
 
-  background-color: rgba(var(--primary-black), 1);
+  background-color: rgba(var(--primary-white), 1);
 
   transform: translateY(-50%);
 
@@ -39,15 +38,9 @@
   transition-property: left, background-color;
 }
 
-.checked {
-  border-color: rgba(var(--primary-black), 1);
-
-  background-color: rgba(var(--primary-black), 1);
-}
-
 .checked::before {
   left: calc(5rem - 1.25rem - var(--spacing-unit));
-  background-color: rgba(var(--primary-white), 1);
+  background-color: rgba(var(--primary-black), 1);
 }
 
 .input {
