--- a/src/ui/spinner/Spinner.module.scss
+++ b/src/ui/spinner/Spinner.module.scss
@@ -23,22 +23,13 @@
   font-size: 10px;
   text-indent: -9999em;
 
-  border-left: 1px solid rgba(var(--bg), 0.2);
+  border-left: 1px solid rgba(var(--primary-white), 0.2);
+  border-top: 1px solid rgba(var(--primary-white), 1);
+  border-right: 1px solid rgba(var(--primary-white), 1);
+  border-bottom: 1px solid rgba(var(--primary-white), 1);
 
   transform: translateZ(0);
   animation: load8 1.1s infinite linear;
-}
-
-.default {
-  border-top: 1px solid rgba(var(--pink), 1);
-  border-right: 1px solid rgba(var(--pink), 1);
-  border-bottom: 1px solid rgba(var(--pink), 1);
-}
-
-.white {
-  border-top: 1px solid rgba(var(--bg), 1);
-  border-right: 1px solid rgba(var(--bg), 1);
-  border-bottom: 1px solid rgba(var(--bg), 1);
 }
 
 @-webkit-keyframes load8 {
