--- a/src/ui/input/Input.module.scss
+++ b/src/ui/input/Input.module.scss
@@ -12,13 +12,25 @@
   box-sizing: border-box;
 
   border: 1px solid rgba(var(--primary-black), 0.1);
-  border-radius: 0.875rem;
 
   background-color: rgba(var(--primary-white), 1);
 
   transition-timing-function: linear;
   transition-duration: 250ms;
   transition-property: border-color;
+}
+
+.medium {
+  min-height: var(--field-height);
+
+  border-radius: 0.875rem;
+}
+
+.small {
+  min-height: 2.5rem;
+  padding: 0 0.75rem;
+
+  border-radius: 0.75rem;
 }
 
 .before {
