--- a/src/modules/pagination/Pagination.module.scss
+++ b/src/modules/pagination/Pagination.module.scss
@@ -1,1 +1,47 @@
+.component {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: end;
+  align-items: center;
 
+  grid-column-gap: calc(var(--spacing-unit) * 2.5);
+}
+
+.list {
+  display: grid;
+  grid-auto-flow: column;
+  grid-column-gap: var(--spacing-unit);
+
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.button {
+  display: grid;
+  place-content: center;
+
+  min-width: 2rem;
+  height: 2rem;
+  padding: 0;
+
+  font-family: var(--primary-font);
+  font-weight: var(--medium);
+  font-size: var(--body-1);
+  line-height: 1;
+  color: rgba(var(--primary-black), 1);
+
+  border: 1px solid rgba(var(--primary-black), 1);
+  border-radius: 0.5rem;
+
+  transition-timing-function: linear;
+  transition-duration: 250ms;
+  transition-property: border-color, color;
+}
+
+.button:disabled:not(.active) {
+  color: rgba(var(--primary-black), 0.5);
+
+  border: 1px solid rgba(var(--primary-black), 0.1);
+}
