--- a/src/pages/auction-detail/AuctionDetail.module.scss
+++ b/src/pages/auction-detail/AuctionDetail.module.scss
@@ -96,3 +96,43 @@
 .actionTitle {
   margin: 0;
 }
+
+.form {
+  display: grid;
+  align-content: space-between;
+
+  height: 100%;
+}
+
+.balance {
+  font-family: var(--primary-font);
+  font-size: 0.875rem;
+  line-height: 1.2;
+  font-weight: var(--medium);
+  color: rgba(var(--primary-black), 1);
+}
+
+.amount {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  grid-column-gap: calc(var(--spacing-unit) * 3);
+}
+
+.max {
+  width: 3.75rem;
+  height: 2rem;
+  padding: 0;
+  margin: 0;
+
+  box-sizing: border-box;
+
+  font-family: var(--primary-font);
+  font-size: 0.875rem;
+  color: rgba(var(--primary-white), 1);
+
+  border: 0;
+  border-radius: 1.875rem;
+
+  background-color: rgba(var(--primary-black), 1);
+}
