--- a/src/ui/button/Button.module.scss
+++ b/src/ui/button/Button.module.scss
@@ -134,6 +134,10 @@
 
     box-shadow: inset 0 0 0 1px rgba(var(--primary-black), 0.8);
   }
+
+  &:disabled {
+    opacity: 0.2;
+  }
 }
 
 .contained-ocean-blue {
