--- a/src/ui/button/Button.module.scss
+++ b/src/ui/button/Button.module.scss
@@ -117,7 +117,7 @@
   transition-property: color, box-shadow, background-color;
 
   &:hover,
-  &:focus,
+  #{mixin.$when-focus-rings-enabled} &:focus,
   &.hover {
     color: rgba(var(--primary-black), 1);
 
@@ -150,7 +150,7 @@
   transition-property: background-image, opacity;
 
   &:hover,
-  &:focus,
+  #{mixin.$when-focus-rings-enabled} &:focus,
   &.hover {
     background-image: linear-gradient(360deg, rgb(255, 209, 139) 0%, rgba(255, 0, 0, 0) 50%), linear-gradient(259.57deg, rgb(38, 99, 255) 1.58%, rgb(255, 56, 40) 92.54%);
   }
@@ -175,7 +175,7 @@
   transition-property: color, background-image, opacity, box-shadow;
 
   &:hover,
-  &:focus,
+  #{mixin.$when-focus-rings-enabled} &:focus,
   &.hover {
     color: rgba(var(--primary-white), 1);
 
@@ -198,7 +198,7 @@
   transition-property: color;
 
   &:hover,
-  &:focus,
+  #{mixin.$when-focus-rings-enabled} &:focus,
   &.hover {
     color: rgba(var(--primary-black), 0.6);
   }
@@ -217,7 +217,7 @@
   transition-property: color;
 
   &:hover,
-  &:focus,
+  #{mixin.$when-focus-rings-enabled} &:focus,
   &.hover {
     color: rgba(var(--primary-black), 1);
   }
@@ -236,7 +236,7 @@
   transition-property: color;
 
   &:hover,
-  &:focus,
+  #{mixin.$when-focus-rings-enabled} &:focus,
   &.hover {
     color: rgba(var(--primary-black), 1);
   }
@@ -249,7 +249,7 @@
 
 .rainbow {
   &:hover,
-  &:focus,
+  #{mixin.$when-focus-rings-enabled} &:focus,
   &.hover {
     color: rgba(var(--primary-white), 1);
 
