--- a/src/ui/date-picker/DatePicker.module.scss
+++ b/src/ui/date-picker/DatePicker.module.scss
@@ -1,3 +1,5 @@
+@use "../../helper/style/mixin";
+
 .component {
   position: relative;
 }
@@ -91,7 +93,7 @@
   transition-property: background-color, color;
 
   &:hover,
-  &:focus {
+  #{mixin.$when-focus-rings-enabled} &:focus {
     color: rgba(var(--primary-white), 1);
 
     background-color: rgba(var(--primary-black), 1);
