--- a/src/modules/whitelist-pop-up/WhiteListPopUp.module.scss
+++ b/src/modules/whitelist-pop-up/WhiteListPopUp.module.scss
@@ -1,17 +1,22 @@
 .component {
   display: grid;
-  grid-row-gap: calc(var(--spacing-unit) * 5);
 
   padding: var(--spacing-unit) calc(var(--spacing-unit) * 7.5) calc(var(--spacing-unit) * 6);
 }
 
+.title {
+  margin: 0;
+}
+
 .text {
   margin: 0;
+  margin-top: calc(var(--spacing-unit) * 1);
 }
 
 .textarea {
   grid-column: -1/1;
 
+  margin: calc(var(--spacing-unit) * 5) 0;
   padding: calc(var(--spacing-unit) * 2.5);
 
   font-size: 1rem;
