--- a/src/pages/auction-detail/View.module.scss
+++ b/src/pages/auction-detail/View.module.scss
@@ -12,7 +12,7 @@
   display: grid;
   align-content: flex-start;
 
-  padding: calc(var(--spacing-unit) * 7.5) calc(var(--spacing-unit) * 14.5) 0;
+  padding: calc(var(--spacing-unit) * 7.5) calc(var(--spacing-unit) * 14.5);
 
   border-radius: 0.5rem;
   background-color: rgba(var(--primary-white), 1);
